style.css
@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap");

/* General */

* {
    margin: 0;
    padding: 0;
}

body {
    background-color: #121118;
    font-family: "Josefin Sans", sans-serif;
}

html {
    scroll-behavior: smooth;
}

h1, h2, h3, p {
    margin: 0 4rem;
    color: #F6F3FC;
}

p {
    font-size: 1.5rem;
    line-height: 1.25;
    font-weight: 300;
}

/* Desktop Nav */

nav, .nav-links {
    display: flex;
}

nav {
    justify-content: space-between;
    align-items: center;
    padding-left: 3vw;
    padding-right: 3vw;
    height: 8vh;
}

.nav-links {
    gap: 2rem;
    list-style: none;
    font-size: 1.5rem;
}

a {
    color: #F6F3FC;
    text-decoration: none;
}

a:hover {
    color: #2D2A3C;
    text-decoration: underline;
    text-underline-offset: 1rem;
}

.logo {
    color: #F6F3FC;
    font-size: 2rem;
}

.logo:hover {
    cursor: default;
}

/* Mobile Nav */
#mobile-nav {
    display: none;
}

.mobile-menu {
    position: relative;
    display: inline-block;
}

.mobile-menu-icon {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 24px;
    width: 30px;
    cursor: pointer;
}

.mobile-menu-icon span {
    width: 100%;
    height: 2px;
    background-color: #F6F3FC;
    transition: all 0.3 ease-in-out;
}

.menu-links {
    position: absolute;
    top: 150%;
    right: -25%;
    background-color: #121118;
    width: max-content;
    max-height: 0;
    overflow: hidden;
    transition: all 0.3 ease-in-out;
}

.menu-links a {
    display: block;
    padding: 10px;
    text-align: right;
    font-size: 1.5rem;
    color: #F6F3FC;
    text-decoration: none;
    transition: all 0.3 ease-in-out;
}

.menu-links li {
    list-style: none;
}

.menu-links.open {
    max-height: 600px;
}

.mobile-menu-icon.open span:first-child {
    transform: rotate(45deg) translate(10px, 5px);
}
.mobile-menu-icon.open span:nth-child(2) {
    opacity: 0;
}
.mobile-menu-icon.open span:last-child {
    transform: rotate(-45deg) translate(10px, -5px);
}

.mobile-menu-icon span:first-child{
    transform: none;
}
.mobile-menu-icon span:nth-child(2){
    opacity: 1;
}
.mobile-menu-icon span:first-child{
    transform: none;
}


/* Sections */
section {
    padding-top: 4vh;
    height: 100vh;
    box-sizing: border-box;
    min-height: fit-content;
}

.title {
    font-size: 2rem;
    font-weight: 600;
}

/* Hero Section */

#hero {    
    display: flex;
    justify-content: center;
    height: 92vh;
}
#hero:hover {
    cursor: default;
}

.hero-text {
    align-self: center;
    font-size: 8rem;
}

.first-name {
    padding-left: 5rem;
}

.surname {
    padding-left: 18rem;
}

.subtitle {
    font-size: 2rem;
    white-space: nowrap;
    padding-left: 63rem;
    transform: rotate(-20deg) translate(0, 200px);
}

/* About Section */

#about {
    background-color: #1B1924;
}

.section-container {
    gap: 4rem;
    height: 80%;
    padding-top: 2rem;
}

.about-text-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
}


/* Animations */

.surname.slide-left {
    animation: title-slide-in-left 1.5s ease-in-out both;
}
.first-name.slide-right {
    animation: title-slide-in-right 1.5s ease-in-out both;
}
.subtitle.slide-right {
    animation: title-slide-in-right 1.5s ease-in-out both 1.5s;
}

.js-scroll {
    opacity: 0;
    transition: opacity 500ms;
}
.js-scroll.scrolled {
    opacity: 1;
    animation: slide-in-left 1s ease-in-out both;
}

@keyframes slide-in-left {
    0% {
        transform: translateX(-100px);
        opacity: 0;
    }
    100% {
        transform: translateX(0);
        opacity: 1;
    }
}
@keyframes slide-in-right {
    0% {
        transform: translateX(100px);
        opacity: 0;
    }
    100% {
        transform: translateX(0);
        opacity: 1;
    }
}

@keyframes title-slide-in-left {
    0% {
        translate: -800px;
        opacity: 0;
    }
    100% {
        translate: 0;
        opacity: 1;
    }
}
@keyframes title-slide-in-right {
    0% {
        translate: 700px;
        opacity: 0;
    }
    100% {
        translate: 0;
        opacity: 1;
    }
}

